syntax = "proto3";

package aseel;

import "google/protobuf/timestamp.proto";
option go_package = "./pointSystem/pointSystemPb";

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  float points = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  int64 status = 1;
  string access_token = 2;
  string error = 3;
}


message ActivityHistory{
  int64 id = 1;
  int64 user_id = 2;
  string ActivityType = 3;
  float points = 4;
  google.protobuf.Timestamp created_at = 5;
}


message GetPointsRequest{
  string email = 1;
}

message GetPointsResponse{
  float points = 1;
  int64 status = 2;
  string error = 3;
}

message AddActivityRequest{
  string email = 1;
  string ActivityType = 2;
  float points = 3;
}

message AddActivityResponse{
  string message = 1;
}

message SendPointsRequest{
  string sender_email = 1;
  string receiver_email = 2;
  float points = 3;
}

message SendPointsResponse{
  int64 status = 1;
  string error = 2;
  string message = 3;
}

message SpendPointsRequest{
  string email = 1;
  float points = 2;
}

message SpendPointsResponse{
  int64 status = 1;
  string error = 2;
  string message = 3;
}


service PointSystem{
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc GetPoints(GetPointsRequest) returns (GetPointsResponse);
  rpc AddActivity(AddActivityRequest) returns (AddActivityResponse);
  rpc SendPoints(SendPointsRequest) returns (SendPointsResponse);
  rpc SpendPoints(SpendPointsRequest) returns (SpendPointsResponse);
}
